# version3-

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
corrections/: candidates.jsonl
docs/: AI_ROUTER.md  FLOW.md  MIGRATION.md  MIGRATION_BINARY.md  PROPOSAL.md  ROUTING.md
eval/: queries.yaml  run_eval.py
m3xa/: router_prompt.md  routing.yaml
m3xa/souls/: core.md  overlay.md
m3xa/souls/modules/: economic_calendar.md  energy.md  fomc.md  geo.md  polymarket.md  positioning.md  sectors.md
m3xabr/: router_prompt.md  routing.yaml
m3xabr/souls/: core.md  examples.md  output.md  overlay.md
m3xabr/souls/modules/: bastidores.md  charts.md  electoral.md  polymarket.md
routing/: routing.yaml
schemas/: geo_response.schema.json
souls/core/: soul_core.md
souls/examples/: examples.md
souls/modules/: brazilbrief.md  charts.md  geo.md
souls/output/: global.md
souls/overlays/: brazil.md  global.md
src/m3xa_souls/: __init__.py  assembler.py  compiler.py  config.py  corrections.py  renderer.py  router.py  tokens.py  validate.py
tests/: test_assembler.py  test_renderer.py  test_router.py  test_validate.py
