[project]
name = "m3xa-souls"
version = "3.0.0"
description = "Layered soul composition for M3xA agents"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
eval = ["boto3>=1.34"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
